# Cradle

./: CMakeLists.txt  README.md  output.txt
core_lib/: CMakeLists.txt
core_lib/include/: Concig.h  ProjectConfig.h
core_lib/include/dependency/: DependencyFactory.h  DependencyManager.h  FileDependency.h  GitDependency.h  IDependency.h  MalformedDependencyException.h  ModuleDependency.h
core_lib/include/fileio/: ModuleLoader.h  ModuleWriter.h  ProjectConfig.h
core_lib/include/module/: IModuleFactory.h  Module.h  ModuleFactory.h  ModuleManager.h  ModuleManagerFactory.h
core_lib/include/validator/: FileValidator.h  GitValidator.h  IValidator.h  IValidatorFactory.h  ModuleValidator.h  ValidatorFactory.h
core_lib/src/: CMakeLists.txt
core_lib/src/dependency/: DependencyFactory.cpp  DependencyManager.cpp  FileDependency.cpp  GitDependency.cpp  MalformedDependencyException.cpp  ModuleDependency.cpp
core_lib/src/fileio/: ModuleLoader.cpp  ModuleWriter.cpp  ProjectConfig.cpp
core_lib/src/module/: Module.cpp  ModuleFactory.cpp  ModuleManager.cpp  ModuleManagerFactory.cpp
core_lib/src/validator/: FileValidator.cpp  GitValidator.cpp  ModuleValidator.cpp  ValidatorFactory.cpp
core_lib/tests/: CMakeLists.txt  dependency.cpp  main.cpp  module.cpp  validator.cpp
include/: Logger.h
src/: Logger.cpp  main.cpp
